// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Card container variant (default) renders correctly with default props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Card content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 4,
      "boxShadow": "2px 2px 2px rgba(153, 153, 153, 1.0)",
      "display": "flex",
      "flex": undefined,
      "flexDirection": "column",
      "padding": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card container variant (default) applies custom padding 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 4,
      "boxShadow": "2px 2px 2px rgba(153, 153, 153, 1.0)",
      "display": "flex",
      "flex": undefined,
      "flexDirection": "column",
      "padding": 48,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card container variant (default) applies custom color 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "backgroundColor": undefined,
      "borderRadius": 4,
      "boxShadow": "2px 2px 2px rgba(153, 153, 153, 1.0)",
      "display": "flex",
      "flex": undefined,
      "flexDirection": "column",
      "padding": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card container variant (default) passes additional Box props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Content",
          ],
          "props": {
            "numberOfLines": 0,
            "selectable": undefined,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "text-regular",
              "fontSize": 14,
              "textAlign": "left",
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {},
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 4,
      "boxShadow": "2px 2px 2px rgba(153, 153, 153, 1.0)",
      "display": "flex",
      "flex": undefined,
      "flexDirection": "column",
      "gap": 8,
      "marginTop": 16,
      "padding": 16,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card display variant renders correctly with required props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "backgroundColor": "#0E9DCD",
          "height": 160,
          "style": {
            "width": "100%",
          },
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Feature Title",
          ],
          "props": {
            "numberOfLines": 0,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "heading-bold",
              "fontSize": 16,
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "display": "flex",
          "flex": 0,
          "flexDirection": "column",
          "gap": 16,
          "padding": 16,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "alignItems": undefined,
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#CDCDCD",
      "borderBottomWidth": 1,
      "borderRadius": 4,
      "borderTopColor": "#CDCDCD",
      "borderTopWidth": 1,
      "boxShadow": "2px 2px 2px rgba(153, 153, 153, 1.0)",
      "display": "flex",
      "flexDirection": "column",
      "gap": 0,
      "overflow": "hidden",
      "padding": 0,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`Card display variant applies custom headerColor 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "backgroundColor": undefined,
          "height": 160,
          "style": {
            "width": "100%",
          },
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "My Feature",
          ],
          "props": {
            "numberOfLines": 0,
            "style": {
              "color": "#1C1C1C",
              "fontFamily": "heading-bold",
              "fontSize": 16,
            },
            "testID": undefined,
          },
          "type": "Text",
        },
      ],
      "props": {
        "onPointerEnter": [Function: AsyncFunction],
        "onPointerLeave": [Function: AsyncFunction],
        "style": {
          "display": "flex",
          "flex": 0,
          "flexDirection": "column",
          "gap": 16,
          "padding": 16,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "onPointerEnter": [Function: AsyncFunction],
    "onPointerLeave": [Function: AsyncFunction],
    "style": {
      "alignItems": undefined,
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#CDCDCD",
      "borderBottomWidth": 1,
      "borderRadius": 4,
      "borderTopColor": "#CDCDCD",
      "borderTopWidth": 1,
      "boxShadow": "2px 2px 2px rgba(153, 153, 153, 1.0)",
      "display": "flex",
      "flexDirection": "column",
      "gap": 0,
      "overflow": "hidden",
      "padding": 0,
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
